--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "build": "yarn tsc",
     "dev:server": "ts-node-dev -r tsconfig-paths/register --transpileOnly --inspect --ignore-watch node_modules src/shared/infra/http/index.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "start": "ts-node src/shared/infra/http/index.ts"
+    "start": "ts-node src/shared/infra/http/index.ts",
+    "test": "jest"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "modbus-serial": "^8.0.0"
+    "modbus-serial": "^8.0.0",
+    "tsyringe": "^4.3.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/jest": "^26.0.0",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "eslint": "^7.3.0",
@@ -28,7 +31,10 @@
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.0.1",
     "prettier": "^2.0.5",
+    "reflect-metadata": "^0.1.13",
+    "ts-jest": "^26.1.1",
     "ts-node-dev": "^1.0.0-pre.49",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.9.5"
