--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,11 @@
     "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true
   },
-  "exclude": ["jest.config.js", "prettier.config.js", ".eslintrc.json", ".eslintrc.js"]
+  "exclude": [
+    "jest.config.js",
+     "prettier.config.js",
+     ".eslintrc.json",
+     ".eslintrc.js",
+     "babel.config.js"
+    ]
 }
