--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/plugin-proposal-decorators": "^7.10.3",
+    "array.prototype.flat": "^1.2.3",
     "babel-plugin-transform-typescript-metadata": "^0.3.0",
     "celebrate": "^12.1.1",
     "cors": "^2.8.5",
