--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev:server": "ts-node-dev -r tsconfig-paths/register --transpileOnly --inspect --ignore-watch node_modules src/shared/infra/http/index.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "start": "ts-node src/shared/infra/http/index.ts",
-    "test": "jest"
+    "test": "jest",
+    "run-build": "node dist/shared/infra/http/index.js"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.1",
